Do not expand \leccancel too early

--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -22,7 +22,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \def\filedate{2015/02/27}
-\def\fileversion{1.0}
+\def\fileversion{1.0.1}
 \def\filename{jslectureplanner.sty}
 
 \NeedsTeXFormat{LaTeX2e}
@@ -541,10 +541,10 @@
     \stepcounter{cancellations}
     \protected@eappto\programlist{\noexpand\item[{\noexpand\bfseries\csuse{sesshortdate\thesnum}}]%
       \noexpand\bgroup\noexpand\bfseries\csuse{sestitle\thesnum}\csuse{@sestitlesep}\csuse{@vasutitle}%
-        \leccancel\noexpand\egroup}
+        \noexpand\leccancel\noexpand\egroup}
     \protected@eappto\programlistbeamer{\noexpand\item[{\noexpand\bfseries\csuse{sesshortdate\thesnum}}]%
       \noexpand\bgroup\noexpand\bfseries\csuse{sestitle\thesnum}\csuse{@sestitlesep}\csuse{@vasutitle}%
-        \leccancel\noexpand\egroup}
+        \noexpand\leccancel\noexpand\egroup}
   \else
     \protected@eappto\programlist{\noexpand\item[{\noexpand\bfseries\csuse{sesshortdate\thesnum}}]%
       \csuse{sestitle\thesnum}\csuse{@sestitlesep}\csuse{@vasutitle}}
