--- a/README
+++ b/README
@@ -60,6 +60,9 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
+* V. 1.0.1 (2015-02-27): - Fix a regression introduced by v. 1.0 (\leccancel not properly
+                           expanded).
+
 * V. 1.0 (2015-02-27):   - Lecture types and term types are not hardcoded anymore and can
                            be freely modified and extended via \DefLecType and \DefSemType.
                          - Add option to add the instructor's name to both the course
