Use pseudo namespace

--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -21,7 +21,7 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2015/07/06}
+\def\filedate{2015/07/07}
 \def\fileversion{1.1dev}
 \def\filename{jslectureplanner.sty}
 
@@ -164,7 +164,7 @@
 % Helper command that uses etoolbox's \AtEndPreamble iff
 % we actually are in a preamble. If not, the argument is
 % output as is.
-\newcommand\AtEndPreambleIfInPreamble[1]{%
+\newcommand\js@AtEndPreambleIfInPreamble[1]{%
   \ifx\@onlypreamble\@notprerr
    #1
   \else
@@ -176,7 +176,7 @@
 % PACKAGE OPTIONS
 %
 \define@key{lec}{lectype}{%
-  \AtEndPreambleIfInPreamble{%
+  \js@AtEndPreambleIfInPreamble{%
     \ifcsundef{lectype@#1}{%
        \PackageError{jslectureplanner}{Lecture type '#1' is not defined!}{%
              Please consult the package manual for instructions how to define it}
@@ -189,7 +189,7 @@
 \DeclareOptionX{type}{\setkeys{lec}{lectype=#1}}
 
 \define@key{lec}{lecsem}{%
-  \AtEndPreambleIfInPreamble{%
+  \js@AtEndPreambleIfInPreamble{%
     \ifcsundef{lecsemshort@#1}{%
        \PackageError{jslectureplanner}{Semester type '#1' is not defined!}{%
              Please consult the package manual for instructions how to define it}
