--- a/examples/metadata.tex
+++ b/examples/metadata.tex
@@ -9,10 +9,11 @@
 \LecTitle[shorttitle={Meine Wissenschaft},
           subtitle={Grundlagen und Theorien},
           titlesep={\ --\ }]{Einf\"uhrung in meine Wissenschaft}
-\LecYear{ss}{2013}
+\LecYear{ss}{2015}
 \LecUni{Universit\"at Schwanheim}
 \LecInstitute{Institut f\"ur Wissenschaftsgeschichte}
-\LecStartDate{17/04/2013}
+\LecInstructor{Dr. Paula Pan}
+\LecStartDate{01/04/2015}
 
 %
 % Session data
@@ -58,7 +59,7 @@
 \end{SessionBlock}
 
 % a semester break of two weeks
-\SetBreaks[units=2,span={10.\,--\,23.\,06.}]{Osterferien}
+\SetBreaks[units=2,span={10.\,--\,23.\,06.}]{Pfingstferien}
 
 % start a new frame in beamer
 \SetBeamerFrameBreak
