This is version 1.0.2

--- a/README
+++ b/README
@@ -60,10 +60,11 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.1 (forthcoming):  - Permit \LecType and \LecYear in the document body (again).
+* V. 1.0.2 (2015-07-07): - Permit \LecType and \LecYear in the document body again
+                           (fix a regression introduced in v. 1.0).
 
-* V. 1.0.1 (2015-02-27): - Fix a regression introduced by v. 1.0 (\leccancel not properly
-                           expanded).
+* V. 1.0.1 (2015-02-27): - Properly expand \leccancel
+                           (fix a regression introduced by v. 1.0).
 
 * V. 1.0 (2015-02-27):   - Lecture types and term types are not hardcoded anymore and can
                            be freely modified and extended via \DefLecType and \DefSemType.
