--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -29,7 +29,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.1dev, 2015/07/06}
+\date{Version 1.0.2, 2015/07/07}
 
 \maketitle
 
@@ -644,14 +644,15 @@ them for inclusion to the package.
 \section{History}
 
 \begin{itemize}
-\item Forthcoming (v. 1.1):
+\item 2015/07/07 (v. 1.0.2):
      \begin{itemize}
-       \item Permit \jcsmacro{LecType} and \jcsmacro{LecYear} in the document body (again).
+       \item Permit \jcsmacro{LecType} and \jcsmacro{LecYear} in the document body again
+             (fix a regression introduced by v. 1.0).
      \end{itemize}
 \item 2015/02/27 (v.\,1.0.1):
      \begin{itemize}
-       \item Fix a regression introduced by v. 1.0 (\jcsmacro{leccancel}
-             was not properly expanded).
+       \item Properly expand \jcsmacro{leccancel}
+             (fix a regression introduced by v. 1.0).
      \end{itemize}
 \item 2015/02/27 (v.\,1.0):
      \begin{itemize}
