--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -59,8 +59,8 @@ Since the package was written for my own needs, it is somewhat tied
 to my workflow. Particularly, it is tied to my context: teaching in
 the Humanities at a German-speaking university. Hence, the categorization
 of the package draws on this context. In particular, all strings and
-formats are German. However, it is possible add new categories as well as
-to customize and translate the strings.
+formats are German. However, it is possible to add new categories as
+well as to customize and translate the strings.
 This is described later in this manual.
 
 This manual describes the basic user interface of the package. Please
