Add packages jsmembertable and jspreslist

--- a/examples/metadata.tex
+++ b/examples/metadata.tex
@@ -42,13 +42,13 @@
 % another thematic block
 \begin{SessionBlock}{Die Geschichte meiner Wissenschaft}
 
-	\NewSession[bibsec=anf]{Die Anf\"ange}
+	\NewSession[bibsec=anf, presstudents={John Doe}]{Die Anf\"ange}
 
-	\NewSession[bibsec=erf]{Erste Erfolge}
+	\NewSession[bibsec=erf, presstudents={Jane Doo}]{Erste Erfolge}
 
 	\NewSession[cancel=true]{Dies Academicus}
 
-	\NewSession[bibsec=konk]{Konkurrenzk\"ampfe}
+	\NewSession[bibsec=konk, presstudents={Jim Dan}]{Konkurrenzk\"ampfe}
 
 	\NewSession[%
 		titlesep={:\ },
