--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -3,6 +3,8 @@
 %%
 %% Package to manage university courses.
 %%
+%% This file is part of the jslectureplanner bundle.
+%%
 %% Author: Juergen Spitzmueller <juergen.spitzmueller@univie.ac.at>
 %%
 %% This work may be distributed and/or modified under the
@@ -21,8 +23,8 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2015/07/07}
-\def\fileversion{1.0.2}
+\def\filedate{2015/07/08}
+\def\fileversion{1.1dev}
 \def\filename{jslectureplanner.sty}
 
 \NeedsTeXFormat{LaTeX2e}
