--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ==================================================================
-The jslectureplanner package
+The jslectureplanner bundle
 
-A LaTeX package to help managing university courses.
+A set of LaTeX packages to help managing university courses.
 
 Maintained by Jürgen Spitzmüller
 E-mail: juergen (at) spitzmueller (dot) org
@@ -14,24 +14,28 @@ See http://www.latex-project.org/lppl.txt
 
 == PURPOSE ==
 
-The jslectureplanner package facilitates the generation and managment
+The jslectureplanner bundle facilitates the generation and managment
 of university course material. It provides an interface to set up and
 access centralized course data that can be reused in all course documents.
-Furthermore, the package is able to calculate the session dates of
-a whole semester and generate course programs, if the sessions follow at
-regular intervals and the date of the first session is specified.
-Moreover, the package can be used to generate a sectioned course
-bibliography via biblatex.
+Furthermore, it is able to calculate the session dates of a whole semester
+and generate course programs, if the sessions follow at regular intervals
+and the date of the first session is specified. Moreover, it can be used
+to generate a sectioned course bibliography via biblatex.
+Next to the main, title-giving package, the bundle includes specific
+packages that help generating course member and presence lists as well as
+lists of student presentations.
 
 
 == CONTENTS ==
 
 The package consists of the following files:
 
-* jslectureplanner.sty (the LaTeX package)
+* jslectureplanner.sty (the main LaTeX package)
+* jsmembertable.sty (LaTeX package to generate course member and presence lists)
+* jspreslist.sty (LaTeX package to generate lists of student presentations)
 * german-default.lps (German 'model' style file with default settings)
 * cologne.lps (German style file attempted at the Univ. of Cologne)
-* jslectureplanner.pdf (package documentation)
+* jslectureplanner.pdf (documentation)
 * jslectureplanner.tex (documentation source)
 * README (this very file)
 
@@ -49,7 +53,13 @@ The following example files are included:
 * lecpresbody.tex: common body of presentation/handout
 * lecturebib.tex: example course bibliography
 * lecturebib.pdf
-* lectureplanner-examples.bib
+* lectureplanner-examples.bib: example bibliography data
+* membertable.tex: example member table
+* membertable.pdf
+* presencetable.tex: example presence table
+* presencetable.pdf
+* preslist.tex: example student presentation list
+* preslist.pdf
 
 
 == DOCUMENTATION ==
@@ -59,6 +69,9 @@ instructions; also have a look at the example files.
 
 
 == CHANGES ==
+
+* V. 1.1 (forthcoming):  - Include and document the companion packages jsmembertable and
+                           jspreslist.
 
 * V. 1.0.2 (2015-07-07): - Permit \LecType and \LecYear in the document body again
                            (fix a regression introduced in v. 1.0).
